<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.media_matrix.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_today"
        android:name="com.example.media_matrix.ui.today.TodayFragment"
        android:label="@string/nav_today" />

    <fragment
        android:id="@+id/nav_radio"
        android:name="com.example.media_matrix.ui.radio.RadioFragment"
        android:label="@string/nav_radio" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.media_matrix.ui.search.SearchFragment"
        android:label="@string/nav_search" />

</navigation>
